--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <style>
       body {
         background-image: url('img/bkgdpic1.jpg');
@@ -19,18 +20,74 @@
       <center><img class="navpic" src=img/ISC.jpg></center>
     </div>
     <nav class="navbar navbar-dark" style="background-color: black">
-      <a class="navbar-brand">Home</a>
-      <a class="navbar-brand">Reviews</a>
-      <a class="navbar-brand">Contact</a>
-      <a class="navbar-brand">FAQ</a>
-      <a class="navbar-brand"><img class="icon" src=img/loginicon.jpg></a>
-      <a class="navbar-brand"><img class="icon" src=img/bagicon.jpg></a>
+      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index2.html">Reviews</a>
+      <a class="navbar-brand" href="index3.html">Contact</a>
+      <a class="navbar-brand" href="index4.html">FAQ</a>
+      <a class="navbar-brand" href="index5.html"><img class="icon" src=img/loginicon.jpg></a>
+      <a class="navbar-brand" href="index6.html"><img class="icon" src=img/bagicon.jpg></a>
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
     </nav>
-
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="10000">
+        <img src="img/caroselpic1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="img/caroselpic2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" data-interval="100000">
+        <img src="img/caroselpic3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+      <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-2">
+      </div>
+      <div class="col-2">
+        <div class="card" style="width: 18rem;">
+          <img src="img/clothesicon.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text"><a href="index2.html">CLOTHING</a><br>We sell galaxy shirts, pants, skirts, dresses, sweatsuits, etc.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-1">
+      </div>
+      <div class="col-2">
+        <div class="card" style="width: 18rem;">
+          <img src="img/houseicon.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text"><a href="index3.html">HOUSEHOLD ITEMS</a><br>We sell galaxy mugs, clocks, tapestries, pillows, etc.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-1">
+      </div>
+      <div class="col-2">
+        <div class="card" style="width: 18rem;">
+          <img src="img/accessoriesicon.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text"><a href="index4.html">ACCESSORIES</a><br>We sell galaxy shoes, scrunchies, phonecases, bandanas, etc.</p>
+          </div>
+        </div>
+        </div>
+      <div class="col-2">
+      </div>
+    </div>
+    <br>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
